added LikedSongs functionality

--- a/src/pages/albumPage.html
+++ b/src/pages/albumPage.html
@@ -86,7 +86,7 @@
                     </button>
                 </div>
                 <div class="songPanel font-inter">
-                    <!-- <div class="songTile">
+                    <div class="songTile">
                         <div class="leftTile">
                             <div class="index">
                                 <p>1</p>
@@ -212,7 +212,7 @@
                                 <p>2:43</p>
                             </div>
                             <div class="heartIcon">
-                                <input type="checkbox"><i class="fa-regular fa-heart"></i></input>
+                                <input type="checkbox"><i class="fa-regular fa-heart likebtn"></i></input>
                             </div>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
             </div>
 
             <div class="controls">
-                <button class="controlBtns" id="shufBtn"><i class="fas fa-random shuffle"></i></button> <!-- Shuffle -->
+                <button class="controlBtns" id="shufBtn"><i class="fas fa-random shuffle"></i></button>  
                 <button class="controlBtns" id="prevBtn"><i class="fas fa-step-backward reverse"></i></button>
                 <!-- Reverse -->
                 <button class="controlBtns" id="playBtn"><i class="fa-solid fa-play"></i></button> <!-- Play -->
