--- a/src/pages/LikedSongs.html
+++ b/src/pages/LikedSongs.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../modular_styles/profileStyles.css" media="print" onload="this.media='all'">
     <script src="../scripts/script.js" defer></script>
     <script src="../scripts/music.js"></script>
+    <script src="../scripts/likedsongs.js"></script>
 
     <script>
         document.querySelectorAll('.like-button').forEach(button => {
@@ -68,7 +69,7 @@
                     <span class="song-duration">4:13</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -77,7 +78,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -86,7 +87,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -95,7 +96,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -104,7 +105,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -113,7 +114,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -122,7 +123,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -131,7 +132,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -140,7 +141,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
                 <div class="song-item">
@@ -149,7 +150,7 @@
                     <span class="song-duration">3:50</span>
                     <div class="like-button">
                         <input type="checkbox" id="like-check" style="display: none;">
-                        <i class="fas fa-heart" style="font-size: larger;"></i>
+                        <i class="fas fa-heart likebtn liked" style="font-size: larger;"></i>
                     </div>
                 </div>
             </div>
