--- a/src/pages/albumPage.html
+++ b/src/pages/albumPage.html
@@ -36,6 +36,7 @@
 <script src="../scripts/script.js" defer></script>
 <script src="../scripts/album.js" defer></script>
 <script src="../scripts/music.js"></script>
+<script src="../scripts/likedsongs.js"></script>
 <link rel="shortcut icon" type="image/x-icon" href="../assets/browserIcon.ico" />
 <link rel="stylesheet" href="albumPage.css" media="print" onload="this.media='all'">
 
