--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -38,7 +38,6 @@
     <link rel="stylesheet" href="HomePage.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="../modular_styles/profileStyles.css" media="print" onload="this.media='all'">
     <script src="../scripts/script.js" defer></script>
-    <script src="../scripts/home.js" defer></script>
     <script src="../scripts/music.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="../assets/browserIcon.ico" />
 </head>
@@ -78,9 +77,9 @@
     <main class="main-body">
         <section class="song-container font-montserrat">
             <h1 id="song-heading">Songs</h1>
-            <div class = "song-list" id="song-list">
+            <div id="song-list">
                 <div class="song-row-1">
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="OneMoreTime">
                         <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -88,7 +87,7 @@
                             <div class="album-name">Daft Punk</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="MainYahanHoon">
                         <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Main Yahan Hoon"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -96,7 +95,7 @@
                             <div class="album-name">Veer Zaara</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="Something">
                         <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -104,7 +103,7 @@
                             <div class="album-name">The Beatles</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="TereLiye">
                         <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Tere Liye"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -112,7 +111,7 @@
                             <div class="album-name">Veer Zaara</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="Haareya">
                         <img src="../assets/images/Meri_Pyaari_Bindu.jpg" class="song-cover" alt="Song Cover: Haareya"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -120,7 +119,7 @@
                             <div class="album-name">Meri Pyaari Bindu</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="DoPal">
                         <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Do Pal"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -129,21 +128,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="song-row-1">
+                <div class="song-row-2">
                     <div class="song-row-item">
-                        <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
+                        <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">One More Time</div>
-                            <div class="album-name">Daft Punk</div>
-                        </div>
-                    </div>
-                    <div class="song-row-item">
-                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Main Yahan Hoon"
-                            width="75px" height="75px">
-                        <div class="title-artist font-syne">
-                            <div class="song-title">Main Yahan Hoon</div>
-                            <div class="album-name">Veer Zaara</div>
+                            <div class="song-title">Something</div>
+                            <div class="album-name">The Beatles</div>
                         </div>
                     </div>
                     <div class="song-row-item">
@@ -155,27 +146,35 @@
                         </div>
                     </div>
                     <div class="song-row-item">
-                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Tere Liye"
+                        <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">Tere Liye</div>
-                            <div class="album-name">Veer Zaara</div>
+                            <div class="song-title">Something</div>
+                            <div class="album-name">The Beatles</div>
                         </div>
                     </div>
                     <div class="song-row-item">
-                        <img src="../assets/images/Meri_Pyaari_Bindu.jpg" class="song-cover" alt="Song Cover: Haareya"
+                        <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">Haareya</div>
-                            <div class="album-name">Meri Pyaari Bindu</div>
+                            <div class="song-title">Something</div>
+                            <div class="album-name">The Beatles</div>
                         </div>
                     </div>
                     <div class="song-row-item">
-                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Do Pal"
+                        <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">Do Pal</div>
-                            <div class="album-name">Veer Zaara</div>
+                            <div class="song-title">Something</div>
+                            <div class="album-name">The Beatles</div>
+                        </div>
+                    </div>
+                    <div class="song-row-item">
+                        <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
+                            width="75px" height="75px">
+                        <div class="title-artist font-syne">
+                            <div class="song-title">Something</div>
+                            <div class="album-name">The Beatles</div>
                         </div>
                     </div>
                 </div>
